--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,1 +1,11 @@
-# TODO: Add build and run instructions for Angular
+# Stage 1 - build Angular app
+FROM node:18 AS builder
+WORKDIR /app
+COPY . .
+RUN npm install && npm run build
+
+# Stage 2 - serve with nginx
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
