--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.4",
     "@angular/ssr": "^20.0.3",
+    "@fontsource/poppins": "^5.2.6",
     "express": "^5.1.0",
     "gsap": "^3.13.0",
     "rxjs": "~7.8.0",
